--- a/index.html
+++ b/index.html
@@ -422,8 +422,8 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div data-w-id="e9a266cf-1683-096c-cf92-c588e656ef23" class="f-testimonial-card-smaller new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6458f12e4c09271080b8b212_Manuel%20Ravier.jpg" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
-                                        <p class="f-paragraph-regular f-text-weight-medium">Maxwell Wallace</p>
-                                        <div class="f-paragraph-small">Investissement Immobilier</div>
+                              f          <p class="f-paragraph-regular f-text-weight-medium">Maxwell Wallace</p>
+                                        <div class="f-paragraph-small">Investor</div>
                                         <div class="text-founder-container">
                                             <div class="left-align margin-top">Maxwell Wallace built a 300 millions dollar investment portfolio through astute risk management and strategic asset allocation, generating consistent returns for his clients even during periods of market volatility.</div>
                                         </div>
@@ -605,7 +605,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                         <p class="f-paragraph-regular f-text-weight-medium">Hugo Biolchini</p>
                                         <div class="f-paragraph-small">Investment</div>
                                         <div class="text-founder-container">
-                                            <div class="left-align margin-top">ertified Financial Planner (CFP) with expertise in financial planning and wealth management. Founder of a boutique financial advisory firm, providing personalized investment advice to high-net-worth individuals.</div>
+                                            <div class="left-align margin-top">Certified Financial Planner (CFP) with expertise in financial planning and wealth management. Founder of a boutique financial advisory firm, providing personalized investment advice to high-net-worth individuals.</div>
                                         </div>
                                     </div>
                                 </div>
@@ -998,7 +998,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                     <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f5a" style="opacity:0" class="fromation-new test"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51b2f0b5db03644735_sUUCC.jpg" loading="lazy" alt="" class="img-formation-new full-height" />
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Vincent Chen</p>
-                            <div class="small-text _13px white">Développer son mindset</div>
+                            <div class="small-text _13px white">Make millions with AI</div>
                         </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a14250983938467de_Success%20pro.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a14250983938467de_Success%20pro-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a14250983938467de_Success%20pro.png 506w"
                             alt="SuccessPro Livre de formation" class="formation-book" />
                         <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f62" class="formation-new-hover">
