--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Ananya Rao</p>
                             <div class="small-text _13px white">Basics of crypto</div>
-                        </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4afd053e1139ef6e7b_Ecom%20pro.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4afd053e1139ef6e7b_Ecom%20pro-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4afd053e1139ef6e7b_Ecom%20pro.png 575w"
+                        </div><img src="media/Its-Time-That-‘Financial-Literacy-Includes-Crypto-Basics-modified.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="media/Its-Time-That-‘Financial-Literacy-Includes-Crypto-Basics-modified.png 500w, media/Its-Time-That-‘Financial-Literacy-Includes-Crypto-Basics-modified.png 575w"
                             alt="" class="formation-book" />
                         <div data-w-id="35777baf-c9d5-e2a8-9c7a-a6fa7c61a339" class="formation-new-hover">
                             <div class="badge populaire">Introduction</div>
@@ -959,7 +959,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Suraj Chada</p>
                             <div class="small-text _13px white">Mastering investment</div>
-                        </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a8c124f3e0b148b56_Business%20Pro.png" loading="lazy" alt=""
+                        </div><img src="media/original_imageshttpsg.foolcdn.comeditorialimag.width-880_1RsBqNB-modified.png" loading="lazy" alt=""
                             class="formation-book" />
                         <div data-w-id="73fdb28e-5b51-f74c-d3dc-08650d4ee29d" class="formation-new-hover">
                             <div class="badge populaire">Investment</div>
@@ -972,8 +972,8 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Emilien Lambert</p>
                             <div class="small-text _13px white">Dive into DeFi</div>
-                        </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4ae03bcd610dcb8d90_Immo%20pro.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4ae03bcd610dcb8d90_Immo%20pro-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4ae03bcd610dcb8d90_Immo%20pro.png 514w"
-                            alt="Le livre de Immo Pro, la seule formation dont vous aurez besoin pour investir dans l’immobilier et générer des revenus passifs, peu importe votre capital de départ" class="formation-book" />
+                        </div><img src="media/40_211_22329e16b0.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="media/40_211_22329e16b0.png 500w, media/40_211_22329e16b0.png 514w"
+                            alt="" class="formation-book" />
                         <div data-w-id="6b2da656-e8ac-049d-34c2-c04b017dfa91"
                             class="formation-new-hover">
                             <div class="badge populaire">Finance</div>
@@ -986,8 +986,8 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Sanjay Vishnu</p>
                             <div class="small-text _13px white">Learn all the basics of Blockchain</div>
-                        </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a9de175dafc1f6b74_Invest%20pro.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a9de175dafc1f6b74_Invest%20pro-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a9de175dafc1f6b74_Invest%20pro.png 505w"
-                            alt="Le livre de Immo Pro, la seule formation dont vous aurez besoin pour gagner de l’argent grâce à l’investissement en bourse et cryptomonnaie" class="formation-book" />
+                        </div><img src="media/recurso_blockchain-modified.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="media/recurso_blockchain-modified.png 500w, media/recurso_blockchain-modified.png 505w"
+                            alt="" class="formation-book" />
                         <div data-w-id="c33cb549-47b4-26a6-e2c7-27d7e2eeabec" class="formation-new-hover">
                             <div class="badge populaire">Blockchain</div>
                             <div>
@@ -999,7 +999,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Vincent Chen</p>
                             <div class="small-text _13px white">Make millions with AI</div>
-                        </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a14250983938467de_Success%20pro.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a14250983938467de_Success%20pro-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a14250983938467de_Success%20pro.png 506w"
+                        </div><img src="media/ai-crypto-bots-modified.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="media/ai-crypto-bots-modified.png 500w, media/ai-crypto-bots-modified.png 506w"
                             alt="SuccessPro Livre de formation" class="formation-book" />
                         <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f62" class="formation-new-hover">
                             <div class="badge populaire">AI </div>
