--- a/index.html
+++ b/index.html
@@ -256,7 +256,14 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div class="banner-btn-container mobile-centered"><a href="" class="btn-1 w-button">Find out more</a></div>
                         </div>
                         <div class="column _50">
-                            <div class="vectors-wrapper-3"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4c556b3556d62dbf78ae_PACK%20MINDEO_%20(1)%20copie.png" loading="lazy" sizes="100vw" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4c556b3556d62dbf78ae_PACK%20MINDEO_%20(1)%20copie-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4c556b3556d62dbf78ae_PACK%20MINDEO_%20(1)%20copie-p-800.png 800w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4c556b3556d62dbf78ae_PACK%20MINDEO_%20(1)%20copie-p-1080.png 1080w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4c556b3556d62dbf78ae_PACK%20MINDEO_%20(1)%20copie-p-1600.png 1600w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4c556b3556d62dbf78ae_PACK%20MINDEO_%20(1)%20copie-p-2000.png 2000w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4c556b3556d62dbf78ae_PACK%20MINDEO_%20(1)%20copie-p-2600.png 2600w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4c556b3556d62dbf78ae_PACK%20MINDEO_%20(1)%20copie.png 2891w"
+                            <div class="vectors-wrapper-3"><img src="media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png" loading="lazy" sizes="100vw" 
+        srcset="media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 500w,
+                media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 800w, 
+                media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 1080w,
+                media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 1600w, 
+                media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 2000w, 
+                media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 2600w,
+                media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 2891w"
                                     alt="" class="vectors-wrapper-4" /></div>
                         </div>
                     </div>
