--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,14 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                         <div class="white small-feature"><strong class="bold-text-2">AI Mania :</strong>Learn how to make millions with AI</div>
                                     </div>
                                 </div><a href="/pack/pack-mindeo" class="btn-1 w-button">GET YOUR PACK NOW !</a></div>
-                            <div class="pack-forma-cta-right"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4cf1bddb4173b886c87c_FOR%20MATION%20(1)-min.png" loading="lazy" sizes="100vw" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4cf1bddb4173b886c87c_FOR%20MATION%20(1)-min-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4cf1bddb4173b886c87c_FOR%20MATION%20(1)-min-p-800.png 800w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4cf1bddb4173b886c87c_FOR%20MATION%20(1)-min-p-1080.png 1080w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4cf1bddb4173b886c87c_FOR%20MATION%20(1)-min-p-1600.png 1600w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4cf1bddb4173b886c87c_FOR%20MATION%20(1)-min-p-2000.png 2000w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4cf1bddb4173b886c87c_FOR%20MATION%20(1)-min-p-2600.png 2600w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/653b4cf1bddb4173b886c87c_FOR%20MATION%20(1)-min.png 2887w"
+                            <div class="pack-forma-cta-right"><img src="media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png" loading="lazy" sizes="100vw" 
+                            srcset="media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 500w, 
+                                    media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 800w,
+                                    media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 1080w,
+                                    media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 1600w,
+                                    media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 2000w, 
+                                    media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 2600w,
+                                    media/png-clipart-gold-bar-and-coin-lot-gold-bar-bullion-coin-bullion-coin-cricket-wealth-gold-coin-investment.png 2887w"
                                     alt="" class="pack-form-cta-img" /></div>
                         </div>
                     </div>
