--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </script>
    
     <link href="https://assets-global.website-files.com/63dd575601b9b8315968fad5/64628fb1d274ba2d849bfd4d_l.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6471f8dd36ce059b65b8f63d_Frame%20256.png" rel="apple-touch-icon" />
+    <link href="media/logo.png" rel="apple-touch-icon" />
    
     <!-- Finsweet Cookie Consent -->
    
@@ -79,7 +79,7 @@
 <body class="body">
     <div class="page-wrapper">
         <div data-collapse="medium" data-animation="default" data-duration="400" data-w-id="eea8426e-8ced-44c5-cdeb-dc123330a187" data-easing="ease" data-easing2="ease" role="banner" class="spark-square-menu-with-centered-links w-nav">
-            <div class="square-menu-with-centered-links-inner"><a href="/" aria-current="page" class="spark-left-side-brand-logo w-nav-brand w--current"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63e36ab0105ac12cbb401b8c_logo.svg" loading="lazy" alt="" height="23"/></a>
+            <div class="square-menu-with-centered-links-inner"><a href="/" aria-current="page" class="spark-left-side-brand-logo w-nav-brand w--current"><img src="media/logo.png" loading="lazy" alt="" height="23"/></a>
                 <nav
                     role="navigation" class="spark-centered-nav-menu w-nav-menu"><a href="" class="spark-nav-link spark-centered w-nav-link">Our courses</a><a href="" class="spark-nav-link spark-centered w-nav-link">Our experts</a><a href="" class="spark-nav-link spark-centered w-nav-link">our free content</a>
                     <a
@@ -1062,7 +1062,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
             <div class="footer-container">
                 <div class="corps-footer">
                     <div class="colonne-gauche">
-                        <div class="div-comprenant-tout"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63ea3bea93de215967bee16e_Logoytpe_blanc.svg" loading="lazy" alt="" class="titre" />
+                        <div class="div-comprenant-tout"><img src="media/logo.png" loading="lazy" alt="" class="titre" />
                             <div class="suivez-nous">Follow us:</div>
                             <div class="reseau-sociaux">
                                 <div class="wrap-reseaux"><a href="" target="_blank" class="conteneur-logo-reseaux w-inline-block"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63ea3bea93de217bedbee172_Vector%20(4).svg" loading="lazy" alt="" class="insta-logo"/></a>
