--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         });
     </script>
    
-    <link href="https://assets-global.website-files.com/63dd575601b9b8315968fad5/64628fb1d274ba2d849bfd4d_l.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="media/userlmn_d752b6dc272bf40d0b18d80e2f8719b9.png" rel="shortcut icon" type="image/x-icon" />
     <link href="media/logo.png" rel="apple-touch-icon" />
    
     <!-- Finsweet Cookie Consent -->
