--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
             <div class="footer-container">
                 <div class="corps-footer">
                     <div class="colonne-gauche">
-                        <div class="div-comprenant-tout"><img src="media/logo.png" loading="lazy" alt="" class="titre" />
+                        <div class="div-comprenant-tout"><img src="media/userlmn_606293b9e141448f2ba7bd0bf5fc7b8b.png" loading="lazy" alt="" class="titre" />
                             <div class="suivez-nous">Follow us:</div>
                             <div class="reseau-sociaux">
                                 <div class="wrap-reseaux"><a href="" target="_blank" class="conteneur-logo-reseaux w-inline-block"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63ea3bea93de217bedbee172_Vector%20(4).svg" loading="lazy" alt="" class="insta-logo"/></a>
