--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div data-collapse="medium" data-animation="default" data-duration="400" data-w-id="eea8426e-8ced-44c5-cdeb-dc123330a187" data-easing="ease" data-easing2="ease" role="banner" class="spark-square-menu-with-centered-links w-nav">
             <div class="square-menu-with-centered-links-inner"><a href="/" aria-current="page" class="spark-left-side-brand-logo w-nav-brand w--current"><img src="media/logo.png" loading="lazy" alt="" height="23"/></a>
                 <nav
-                    role="navigation" class="spark-centered-nav-menu w-nav-menu"><a href="" class="spark-nav-link spark-centered w-nav-link">Our courses</a><a href="" class="spark-nav-link spark-centered w-nav-link">Our experts</a><a href="" class="spark-nav-link spark-centered w-nav-link">our free content</a>
+                    role="navigation" class="spark-centered-nav-menu w-nav-menu"><a href="#Formations" class="spark-nav-link spark-centered w-nav-link">Our courses</a><a href="#nosExperts" class="spark-nav-link spark-centered w-nav-link">Our experts</a><a href="#nosContenus" class="spark-nav-link spark-centered w-nav-link">our free content</a>
                     <a
                         href="" class="spark-nav-link spark-centered w-nav-link">About us</a>
                     <a href="" class="spark-nav-link spark-centered w-nav-link">Affiliates</a></nav>
