--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div>
                                 <p class="f-paragraph-regular f-text-weight-medium white">CryptoCrash Course</p>
                                 <div class="small-text _13px white left-align">Master the volatile crypto market with our CryptoCrash Course! Gain expert insights and practical skills to navigate digital assets confidently. Join thousands of successful investors who have unlocked the secrets of crypto success!</div>
-                            </div><a href="/formations/ecom-pro" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
+                            </div><a href="" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
                     <div data-w-id="73fdb28e-5b51-f74c-d3dc-08650d4ee295" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51e03bcda5f9cb9add_test.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
@@ -973,7 +973,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div>
                                 <p class="f-paragraph-regular f-text-weight-medium white">CryptoProfit Pro</p>
                                 <div class="small-text _13px white left-align">Elevate your crypto investments with CryptoProfit Pro! Learn advanced strategies to maximize returns in the fast-paced crypto market. Unleash your full potential as a crypto investor today!</div>
-                            </div><a href="/formations/business-pro" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
+                            </div><a href="" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
                     <div data-w-id="6b2da656-e8ac-049d-34c2-c04b017dfa89" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51410a151f6d1145d9_Immopro.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
@@ -987,7 +987,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div>
                                 <p class="f-paragraph-regular f-text-weight-medium white">DeFi Dive</p>
                                 <div class="small-text _13px white left-align">Explore the future of finance with DeFi Dive! Discover opportunities for financial freedom in decentralized finance. Join us to unlock new possibilities in the DeFi ecosystem!</div>
-                            </div><a href="/formations/immo-pro" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
+                            </div><a href="" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
                     <div data-w-id="c33cb549-47b4-26a6-e2c7-27d7e2eeabe4" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51f349772418c34d9a_Invest%20Pro.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
@@ -1000,14 +1000,14 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div>
                                 <p class="f-paragraph-regular f-text-weight-medium white">BlockBuster Bootcamp</p>
                                 <div class="small-text _13px white left-align">Build the future with BlockBuster Bootcamp! Learn blockchain development fundamentals and create decentralized applications. Launch your blockchain journey with us today!</div>
-                            </div><a href="/formations/invest-pro" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
+                            </div><a href="" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
                     <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f5a" style="opacity:0" class="fromation-new test"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51b2f0b5db03644735_sUUCC.jpg" loading="lazy" alt="" class="img-formation-new full-height" />
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Vincent Chen</p>
                             <div class="small-text _13px white">Make millions with AI</div>
                         </div><img src="media/ai-crypto-bots-modified.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="media/ai-crypto-bots-modified.png 500w, media/ai-crypto-bots-modified.png 506w"
-                            alt="SuccessPro Livre de formation" class="formation-book" />
+                            alt="" class="formation-book" />
                         <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f62" class="formation-new-hover">
                             <div class="badge populaire">AI </div>
                             <div>
@@ -1042,7 +1042,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                     <div class="pack-cta-check"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/64539fade55e8a5d72ff03db_GCBDFichier%2033%202.png" loading="lazy" alt="" class="check" />
                                         <div class="white small-feature"><strong class="bold-text-2">AI Mania :</strong>Learn how to make millions with AI</div>
                                     </div>
-                                </div><a href="/pack/pack-mindeo" class="btn-1 w-button">GET YOUR PACK NOW !</a></div>
+                                </div><a href="" class="btn-1 w-button">GET YOUR PACK NOW !</a></div>
                             <div class="pack-forma-cta-right"><img src="media/bitcoin-btc-cryptocurrency-market-bull-run-modified.png" loading="lazy" sizes="100vw" 
                             srcset="media/bitcoin-btc-cryptocurrency-market-bull-run-modified.png 500w, 
                                     media/bitcoin-btc-cryptocurrency-market-bull-run-modified.png 800w,
@@ -1078,14 +1078,14 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                     <div class="colonne-droite">
                         <div class="sous-colonne-gauche">
                             <h3 class="titre-footer">Digital Wealth</h3>
-                            <div class="wrap-invest-new"><a href="/pack/pack-mindeo" class="link-page-footer">Digital Wealth Pack </a><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6433ba16545affb9d2fafa04_Badge.png" loading="lazy" alt="" class="badge-footer" /></div>
+                            <div class="wrap-invest-new"><a href="" class="link-page-footer">Digital Wealth Pack </a><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6433ba16545affb9d2fafa04_Badge.png" loading="lazy" alt="" class="badge-footer" /></div>
                             <a
-                                href="/formations/ecom-pro" class="link-page-footer">CryptoCrash Course</a>
-                                <div class="wrap-invest-new"><a href="/formations/business-pro" class="link-page-footer">CryptoProfit Pro</a><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63ea3bea93de21ca7abee173_Badge.svg" loading="lazy" alt="" class="badge-footer"
-                                    /></div><a href="/formations/immo-pro" class="link-page-footer">DeFi Dive</a><a href="/formations/invest-pro" class="link-page-footer">ReguCrypto</a><a href="/formations/success-pro" class="link-page-footer">BlockBuster Bootcamp</a></div>
+                                href="" class="link-page-footer">CryptoCrash Course</a>
+                                <div class="wrap-invest-new"><a href="" class="link-page-footer">CryptoProfit Pro</a><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63ea3bea93de21ca7abee173_Badge.svg" loading="lazy" alt="" class="badge-footer"
+                                    /></div><a href="" class="link-page-footer">DeFi Dive</a><a href="" class="link-page-footer">Crypto AI Edge</a><a href="" class="link-page-footer">BlockBuster Bootcamp</a></div>
                         <div
                             class="sous-colonne-droite">
-                            <h3 class="titre-footer">Ressources</h3><a href="https://training.mindeo.com/" class="link-page-footer">Access</a><a href="/recrutement" class="link-page-footer">Affiliates</a><a href="/a-propos" class="link-page-footer">About</a></div>
+                            <h3 class="titre-footer">Ressources</h3><a href="" class="link-page-footer">Access</a><a href="" class="link-page-footer">Affiliates</a><a href="" class="link-page-footer">About</a></div>
                 </div>
             </div>
             <div class="separateur">
@@ -1094,7 +1094,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
             <div class="wrap-mentions">
                 <div class="extra-padding-wrap-mentions">
                     <div class="mentions-bas-de-pages gras">©Digital Wealth 2024</div>
-                    <div class="links-policy"><a href="/politique-de-confidentialite" class="link-page-footer">Privacy Policy</a><a href="/mentions-legales" class="link-page-footer">Legal notice</a><a href="/termes-et-conditions-de-vente" class="link-page-footer">Term of service</a></div>
+                    <div class="links-policy"><a href="" class="link-page-footer">Privacy Policy</a><a href="" class="link-page-footer">Legal notice</a><a href="" class="link-page-footer">Term of service</a></div>
                 </div>
             </div>
         </div>
