--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body class="body">
     <div class="page-wrapper">
         <div data-collapse="medium" data-animation="default" data-duration="400" data-w-id="eea8426e-8ced-44c5-cdeb-dc123330a187" data-easing="ease" data-easing2="ease" role="banner" class="spark-square-menu-with-centered-links w-nav">
-            <div class="square-menu-with-centered-links-inner"><a href="/" aria-current="page" class="spark-left-side-brand-logo w-nav-brand w--current"><img src="media/logo.png" loading="lazy" alt="" height="23"/></a>
+            <div class="square-menu-with-centered-links-inner"><a href="" aria-current="page" class="spark-left-side-brand-logo w-nav-brand w--current"><img src="media/logo.png" loading="lazy" alt="" height="23"/></a>
                 <nav
                     role="navigation" class="spark-centered-nav-menu w-nav-menu"><a href="#Formations" class="spark-nav-link spark-centered w-nav-link">Our courses</a><a href="#nosExperts" class="spark-nav-link spark-centered w-nav-link">Our experts</a><a href="#nosContenus" class="spark-nav-link spark-centered w-nav-link">our free content</a>
                     <a
@@ -135,7 +135,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             </div>
                             <div class="subtitle set-width mobile-centered">Digital Wealth is a leading online education platform dedicated to empowering individuals with the knowledge and skills to thrive in the rapidly evolving world of cryptocurrency and blockchain technology. </div>
                             <div class="banner-btn-container mobile-centered"><a href="" class="btn-1 w-button">Explore courses</a>
-                                <a id="playVideo" href="#" class="link-video w-inline-block">
+                                <a id="playVideo" href="#videoPlayer" class="link-video w-inline-block">
                                     <div>View video</div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/640eec01ec613945d7331a9c_Arrow.svg" loading="lazy" alt="" class="link-video-svg" /></a>
                             </div>
                         </div>
