--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div data-w-id="e9a266cf-1683-096c-cf92-c588e656ef23" class="f-testimonial-card-smaller new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6458f12e4c09271080b8b212_Manuel%20Ravier.jpg" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
-                              f          <p class="f-paragraph-regular f-text-weight-medium">Maxwell Wallace</p>
+                                      <p class="f-paragraph-regular f-text-weight-medium">Maxwell Wallace</p>
                                         <div class="f-paragraph-small">Investor</div>
                                         <div class="text-founder-container">
                                             <div class="left-align margin-top">Maxwell Wallace built a 300 millions dollar investment portfolio through astute risk management and strategic asset allocation, generating consistent returns for his clients even during periods of market volatility.</div>
