--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                 <div class="slider-right-box">
                     <div class="tricks-slider">
                         <div class="tricks-slider_slide">
-                            <div data-w-id="b154794a-639e-8cf5-9f66-f0f282c5dcc7" class="f-testimonial-card-smaller new"><img src="media/Emilien.jpg" loading="lazy" alt="" class="image" />
+                            <div data-w-id="b154794a-639e-8cf5-9f66-f0f282c5dcc7" class="f-testimonial-card-smaller new"><img src="media/Emilien.png" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
                                         <p class="f-paragraph-regular f-text-weight-medium">Emilien Lambert</p>
