--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             </div>
                         </div>
                         <div class="tricks-slider_slide">
-                            <div data-w-id="e9a266cf-1683-096c-cf92-c588e656ef23" class="f-testimonial-card-smaller new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6458f12e4c09271080b8b212_Manuel%20Ravier.jpg" loading="lazy" alt="" class="image" />
+                            <div data-w-id="e9a266cf-1683-096c-cf92-c588e656ef23" class="f-testimonial-card-smaller new"><img src="media/Maxwell.png" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
                                       <p class="f-paragraph-regular f-text-weight-medium">Maxwell Wallace</p>
