--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             </div>
                         </div>
                         <div class="tricks-slider_slide">
-                            <div data-w-id="0b609bf0-d488-48fe-f7e3-25f3f8782b13" class="f-testimonial-card-smaller new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6491a95f32d5e1196dad45ef_642e9c63af160b797d04cf6d_Timothe%CC%81e%20Moiroux-p-500.png" loading="lazy" alt="" class="image" />
+                            <div data-w-id="0b609bf0-d488-48fe-f7e3-25f3f8782b13" class="f-testimonial-card-smaller new"><img src="media/suraj.png" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
                                         <p class="f-paragraph-regular f-text-weight-medium">Suraj chada</p>
