--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             </div>
                         </div>
                         <div class="tricks-slider_slide">
-                            <div data-w-id="f84be439-fbd5-d807-c63d-a11ece44e7a7" class="f-testimonial-card-smaller new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/644ce84f37f58c75977c348a_oussama.jpg" loading="lazy" alt="" class="image" />
+                            <div data-w-id="f84be439-fbd5-d807-c63d-a11ece44e7a7" class="f-testimonial-card-smaller new"><img src="media/chen.png" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
                                         <p class="f-paragraph-regular f-text-weight-medium">Dr. Sophia Chen</p>
