--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             </div>
                         </div>
                         <div class="tricks-slider_slide">
-                            <div data-w-id="51c402a4-52d0-9b68-622a-b7333325e85f" class="f-testimonial-card-smaller new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6468dbc440c88887a85bd50f_Alec%20henry.jpg" loading="lazy" alt="" class="image" />
+                            <div data-w-id="51c402a4-52d0-9b68-622a-b7333325e85f" class="f-testimonial-card-smaller new"><img src="media/ananya.png" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
                                         <p class="f-paragraph-regular f-text-weight-medium">Ananya Rao</p>
