--- a/index.html
+++ b/index.html
@@ -624,10 +624,10 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div data-w-id="b478f2e7-1ddd-a883-14bd-3c2240452b38" class="f-testimonial-card-smaller new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6458e674bf333caa554891b5_Arnaud%20Touati.jpg" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
-                                        <p class="f-paragraph-regular f-text-weight-medium">Vincent Chen</p>
+                                        <p class="f-paragraph-regular f-text-weight-medium">Vincent Clark</p>
                                         <div class="f-paragraph-small">Trading</div>
                                         <div class="text-founder-container">
-                                            <div class="left-align margin-top">Vincent Chen's innovative approach to quantitative trading has enabled him to outperform the market and generate consistent returns for his firm. <br/></div>
+                                            <div class="left-align margin-top">Vincent Clark's innovative approach to quantitative trading has enabled him to outperform the market and generate consistent returns for his firm. <br/></div>
                                         </div>
                                     </div>
                                 </div>
