--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             </div>
                         </div>
                         <div class="tricks-slider_slide">
-                            <div data-w-id="03509ea3-4976-0a72-98b5-88e0d7b94b6e" class="f-testimonial-card-smaller new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6458e5d9c2dd950da035556c_Anthony%20Gonnet.jpg" loading="lazy" alt="" class="image" />
+                            <div data-w-id="03509ea3-4976-0a72-98b5-88e0d7b94b6e" class="f-testimonial-card-smaller new"><img src="media/olivia.png" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
                                         <p class="f-paragraph-regular f-text-weight-medium">Olivia Parker</p>
