--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             </div>
                         </div>
                         <div class="tricks-slider_slide">
-                            <div data-w-id="f0ed2afa-2784-e1dc-43ae-ddef2b5f9776" class="f-testimonial-card-smaller new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6468dbc4714c9eef27db0475_Photo.jpg" loading="lazy" alt="" class="image" />
+                            <div data-w-id="f0ed2afa-2784-e1dc-43ae-ddef2b5f9776" class="f-testimonial-card-smaller new"><img src="media/chang.png" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
                                         <p class="f-paragraph-regular f-text-weight-medium">Emily Chang</p>
