--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             </div>
                         </div>
                         <div class="tricks-slider_slide">
-                            <div data-w-id="f0ed2afa-2784-e1dc-43ae-ddef2b5f97d2" class="f-testimonial-card-smaller new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6458ce49f9b6b4144e126133_it5.jpg" loading="lazy" alt="" class="image" />
+                            <div data-w-id="f0ed2afa-2784-e1dc-43ae-ddef2b5f97d2" class="f-testimonial-card-smaller new"><img src="media/laura.png" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
                                         <p class="f-paragraph-regular f-text-weight-medium">Dr. Laura Rodriguez</p>
@@ -594,7 +594,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div data-w-id="b478f2e7-1ddd-a883-14bd-3c2240452b1a" class="f-testimonial-card-smaller new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6458e5fe893c47ae5556ff1a_it1.jpg" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
-                                        <p class="f-paragraph-regular f-text-weight-medium">Rebecca Williams<br/></p>
+                                        <p class="f-paragraph-regular f-text-weight-medium">Conrad Higgins<br/></p>
                                         <div class="f-paragraph-small">Finance expert</div>
                                         <div class="text-founder-container">
                                             <div class="left-align margin-top">Ph.D. in Finance with expertise in corporate finance and valuation. Former investment analyst at a top-tier asset management firm, specializing in blockchain-based companies.<br/></div>
