--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                           
                                             <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
                                                 <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
-                                                      <iframe id="videoPlayer" controls style="width:100%; height:100%;"src="media/videoplayback.mp4" title=" video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                                      <iframe id="videoPlayer" controls style="width:100%; height:100%;"src="media/videoplayback.mp4" title=" video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>&nbsp;</iframe>
                                                 </div>
                                             </div>
                                         </div>
