--- a/index.html
+++ b/index.html
@@ -1085,10 +1085,10 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <a
                                 href="" class="link-page-footer">CryptoCrash Course</a>
                                 <div class="wrap-invest-new"><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">CryptoProfit Pro</a><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63ea3bea93de21ca7abee173_Badge.svg" loading="lazy" alt="" class="badge-footer"
-                                    /></div><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">DeFi Dive</a><a href="" class="link-page-footer">Crypto AI Edge</a><a href="" class="link-page-footer">BlockBuster Bootcamp</a></div>
+                                    /></div><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">DeFi Dive</a><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">Crypto AI Edge</a><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">BlockBuster Bootcamp</a></div>
                         <div
                             class="sous-colonne-droite">
-                            <h3 class="titre-footer">Ressources</h3><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">Access</a><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">Affiliates</a><a href="" class="link-page-footer">About</a></div>
+                            <h3 class="titre-footer">Ressources</h3><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">Access</a><a href="" class="link-page-footer">Affiliates</a><a href="" class="link-page-footer">About</a></div>
                 </div>
             </div>
             <div class="separateur">
