--- a/index.html
+++ b/index.html
@@ -1013,8 +1013,8 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                         <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f62" class="formation-new-hover">
                             <div class="badge populaire">AI </div>
                             <div>
-                                <p class="f-paragraph-regular f-text-weight-medium white">Crypto AI EDGE</p>
-                                <div class="small-text _13px white left-align">Gain the ultimate advantage with Crypto AI EDGE! Harness the power of AI to optimize trading strategies and unlock new opportunities in blockchain. Stay ahead of the curve with AI at your fingertips!</div>
+                                <p class="f-paragraph-regular f-text-weight-medium white">AI Mania</p>
+                                <div class="small-text _13px white left-align">Gain the ultimate advantage with AI Mania ! Harness the power of AI to optimize trading strategies and unlock new opportunities in blockchain. Stay ahead of the curve with AI at your fingertips!</div>
                             </div><a href="https://digitalwealthacademy.github.io/Pack/" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
                     <div class="pack-cta-container _100-tablette">
@@ -1084,7 +1084,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <a
                                 href="" class="link-page-footer">CryptoCrash Course</a>
                                 <div class="wrap-invest-new"><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">CryptoProfit Pro</a><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63ea3bea93de21ca7abee173_Badge.svg" loading="lazy" alt="" class="badge-footer"
-                                    /></div><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">DeFi Dive</a><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">Crypto AI Edge</a><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">BlockBuster Bootcamp</a></div>
+                                    /></div><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">DeFi Dive</a><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">AI Mania</a><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">BlockBuster Bootcamp</a></div>
                         <div
                             class="sous-colonne-droite">
                             <h3 class="titre-footer">Ressources</h3><a href="https://digitalwealthacademy.github.io/Pack/" class="link-page-footer">Access</a><a href="" class="link-page-footer">Affiliates</a><a href="" class="link-page-footer">About</a></div>
