--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                                 <div class="f-testimonial-author">
                                     <div>
                                         <p class="f-paragraph-regular f-text-weight-medium">Suraj chada</p>
-                                        <div class="f-paragraph-small">Investissement </div>
+                                        <div class="f-paragraph-small">Investment </div>
                                         <div class="text-founder-container">
                                             <div class="left-align margin-top">Having grown up in extreme poverty in India, Suraj's endless determination and desire to succeed has enabled him to make millions with crypto </div>
                                         </div>
