--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
                     </div>
                     <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f5a" style="opacity:0" class="fromation-new test"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51b2f0b5db03644735_sUUCC.jpg" loading="lazy" alt="" class="img-formation-new full-height" />
                         <div class="formation-new-info-box">
-                            <p class="f-paragraph-regular f-text-weight-medium center">Vincent Chen</p>
+                            <p class="f-paragraph-regular f-text-weight-medium center">Victor huftier</p>
                             <div class="small-text _13px white">Make millions with AI</div>
                         </div><img src="media/ai-crypto-bots-modified.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="media/ai-crypto-bots-modified.png 500w, media/ai-crypto-bots-modified.png 506w"
                             alt="" class="formation-book" />
