--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
                 <div class="fromation-new-box">
                     <div data-w-id="cd30ab72-fa71-9bd7-1bdf-054b602a6146" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c517287d80579992f24_EcomPro.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
-                            <p class="f-paragraph-regular f-text-weight-medium center">Ananya Rao</p>
+                            <p class="f-paragraph-regular f-text-weight-medium center">Lucas Paciorek</p>
                             <div class="small-text _13px white">Basics of crypto</div>
                         </div><img src="media/Its-Time-That-‘Financial-Literacy-Includes-Crypto-Basics-modified.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="media/Its-Time-That-‘Financial-Literacy-Includes-Crypto-Basics-modified.png 500w, media/Its-Time-That-‘Financial-Literacy-Includes-Crypto-Basics-modified.png 575w"
                             alt="" class="formation-book" />
