--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                                 alt="" class="pack-formation-book"/></a><a data-w-id="fa30e064-96f3-3ad0-4ea8-6d6059f75f53"
                                 href="https://digitalwealthacademy.github.io/Pack/" class="pack-formation-container w-inline-block"><img src="media/0x0_1_800x1350.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, 260px" srcset="media/0x0_1_800x1350.jpg 500w, media/0x0_1_800x1350.jpg 503w" alt="" class="forma-card"/><div class="pack-formation-info"><div class="stroke-container opaque"><div class="badge badge-small-white">Decentralized Finance (DeFi) Fundamentals</div><h3 class="h3 smaller _8f8fab">DeFi Dive</h3><div class="grey margin-bottom-mobile">Dive Into DeFi: Explore New Frontiers in Finance and Revolutionize Your Financial Future! </div><div class="badge-container"><div class="btn-1 smaller white">Find out more</div></div></div></div><img src="media/40_211_22329e16b0.png" loading="lazy" sizes="(max-width: 479px) 120px, 170px" srcset="media/40_211_22329e16b0.png 500w, media/40_211_22329e16b0.png 505w" alt="" class="pack-formation-book"/></a>
                             <a
-                                data-w-id="fa30e064-96f3-3ad0-4ea8-6d6059f75f61" href="https://digitalwealthacademy.github.io/Pack/" class="pack-formation-container w-inline-block"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6495a05669906da7f01af64e_business.jpeg" loading="lazy" alt="" class="forma-card" />
+                                data-w-id="fa30e064-96f3-3ad0-4ea8-6d6059f75f61" href="https://digitalwealthacademy.github.io/Pack/" class="pack-formation-container w-inline-block"><img src="media/abstract-representation-of-blockchain-technology-interconnected-blocks-glowing-with-energy-nestled_800x1350.png" loading="lazy" alt="" class="forma-card" />
                                 <div class="pack-formation-info">
                                     <div class="stroke-container opaque">
                                         <div class="badge badge-small-white">Blockchain</div>
@@ -971,7 +971,7 @@
                                 <div class="small-text _13px white left-align">Elevate your crypto investments with CryptoProfit Pro! Learn advanced strategies to maximize returns in the fast-paced crypto market. Unleash your full potential as a crypto investor today!</div>
                             </div><a href="https://digitalwealthacademy.github.io/Pack/" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
-                    <div data-w-id="6b2da656-e8ac-049d-34c2-c04b017dfa89" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51410a151f6d1145d9_Immopro.jpg" loading="lazy" alt="" class="img-formation-new" />
+                    <div data-w-id="6b2da656-e8ac-049d-34c2-c04b017dfa89" style="opacity:0" class="fromation-new"><img src="media/0x0_1_800x1350.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Emilien Lambert</p>
                             <div class="small-text _13px white">Dive into DeFi</div>
@@ -998,7 +998,7 @@
                                 <div class="small-text _13px white left-align">Build the future with BlockBuster Bootcamp! Learn blockchain development fundamentals and create decentralized applications. Launch your blockchain journey with us today!</div>
                             </div><a href="https://digitalwealthacademy.github.io/Pack/" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
-                    <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f5a" style="opacity:0" class="fromation-new test"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51b2f0b5db03644735_sUUCC.jpg" loading="lazy" alt="" class="img-formation-new full-height" />
+                    <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f5a" style="opacity:0" class="fromation-new test"><img src="media/abstract-representation-of-blockchain-technology-interconnected-blocks-glowing-with-energy-nestled_800x1350.png" loading="lazy" alt="" class="img-formation-new full-height" />
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Victor huftier</p>
                             <div class="small-text _13px white">Make millions with AI</div>
