--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                         </div>
                                     </div>
                                 </div><img src="media/recurso_blockchain-modified.png" loading="lazy" alt=""
-                                    class="pack-formation-book" /></a><a data-w-id="fa30e064-96f3-3ad0-4ea8-6d6059f75f6f" href="https://digitalwealthacademy.github.io/Pack/" class="pack-formation-container w-inline-block"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6495a056c6f2b79e113ac181_succes.jpeg" loading="lazy" alt="" class="forma-card"/><div class="pack-formation-info"><div class="stroke-container"><div class="badge badge-small-white">AI </div><h3 class="h3 smaller _8f8fab">CryptoAI Edge</h3><div class="grey margin-bottom-mobile">Empower Yourself to Master the Fusion of AI and Crypto: Using AI to make millions !</div><div class="badge-container"><div class="btn-1 smaller white">Find out more</div></div></div></div><img src="media/ai-crypto-bots-modified.png" loading="lazy" sizes="(max-width: 479px) 120px, 170px" srcset="media/ai-crypto-bots-modified.png 500w, media/ai-crypto-bots-modified.png 506w" alt="SuccessPro Livre de formation" class="pack-formation-book"/></a></div>
+                                    class="pack-formation-book" /></a><a data-w-id="fa30e064-96f3-3ad0-4ea8-6d6059f75f6f" href="https://digitalwealthacademy.github.io/Pack/" class="pack-formation-container w-inline-block"><img src="media/download_2_800x1350.jpg" loading="lazy" alt="" class="forma-card"/><div class="pack-formation-info"><div class="stroke-container"><div class="badge badge-small-white">AI </div><h3 class="h3 smaller _8f8fab">AI Mania</h3><div class="grey margin-bottom-mobile">Empower Yourself to Master the Fusion of AI and Crypto: Using AI to make millions !</div><div class="badge-container"><div class="btn-1 smaller white">Find out more</div></div></div></div><img src="media/ai-crypto-bots-modified.png" loading="lazy" sizes="(max-width: 479px) 120px, 170px" srcset="media/ai-crypto-bots-modified.png 500w, media/ai-crypto-bots-modified.png 506w" alt="" class="pack-formation-book"/></a></div>
                 </div>
             </div>
             <div data-w-id="73aecbc4-450b-f6ff-226c-1adc85ad1925" class="gradient-container">
@@ -998,7 +998,7 @@
                                 <div class="small-text _13px white left-align">Build the future with BlockBuster Bootcamp! Learn blockchain development fundamentals and create decentralized applications. Launch your blockchain journey with us today!</div>
                             </div><a href="https://digitalwealthacademy.github.io/Pack/" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
-                    <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f5a" style="opacity:0" class="fromation-new test"><img src="media/abstract-representation-of-blockchain-technology-interconnected-blocks-glowing-with-energy-nestled_800x1350.png" loading="lazy" alt="" class="img-formation-new full-height" />
+                    <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f5a" style="opacity:0" class="fromation-new test"><img src="media/download_2_800x1350.jpg" loading="lazy" alt="" class="img-formation-new full-height" />
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Victor huftier</p>
                             <div class="small-text _13px white">Make millions with AI</div>
