--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
                                 <div class="small-text _13px white left-align">Explore the future of finance with DeFi Dive! Discover opportunities for financial freedom in decentralized finance. Join us to unlock new possibilities in the DeFi ecosystem!</div>
                             </div><a href="https://digitalwealthacademy.github.io/Pack/" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
-                    <div data-w-id="c33cb549-47b4-26a6-e2c7-27d7e2eeabe4" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51f349772418c34d9a_Invest%20Pro.jpg" loading="lazy" alt="" class="img-formation-new" />
+                    <div data-w-id="c33cb549-47b4-26a6-e2c7-27d7e2eeabe4" style="opacity:0" class="fromation-new"><img src="media/abstract-representation-of-blockchain-technology-interconnected-blocks-glowing-with-energy-nestled_800x1350.png" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Sanjay Vishnu</p>
                             <div class="small-text _13px white">Learn all the basics of Blockchain</div>
